# rocRoller

next-cmake/: CMakeLists.txt
next-cmake/GPUArchitectureGenerator/: CMakeLists.txt
next-cmake/test/: CMakeLists.txt
next-cmake/test/common/: CMakeLists.txt
